y.output
Terminals unused in grammar

   LCOM
   RCOM
   DOT
   SIGN
   SPACE
   ANYCHAR
   DIGIT
   ALPHABETICAL
   ASCII
   STRING_WORD


Grammar

    0 $accept: PROGRAM $end

    1 PROGRAM: FUNCTIONS

    2 FUNCTIONS: MAIN_FUNCTION
    3          | FUNCTIONS FUNCTION_DEFINITION

    4 MAIN_FUNCTION: FUNCTION TYPE MAIN LP ARGUMENTS RP LB STATEMENTS RB
    5              | FUNCTION TYPE MAIN LP RP LB STATEMENTS RB

    6 STATEMENTS: STATEMENT
    7           | STATEMENTS STATEMENT

    8 STATEMENT: MATCHED
    9          | UNMATCHED

   10 MATCHED: IF LP LOGICAL_EXPRESSION RP MATCHED ELSE MATCHED
   11        | NON_IF_STATEMENT

   12 UNMATCHED: IF LP LOGICAL_EXPRESSION RP STATEMENT
   13          | IF LP LOGICAL_EXPRESSION RP MATCHED ELSE UNMATCHED

   14 NON_IF_STATEMENT: ITERATIVE_STATEMENT
   15                 | LB STATEMENTS RB
   16                 | DECLARATIVE_STATEMENT SEMICOLON
   17                 | ASSIGNMENT_STATEMENT SEMICOLON
   18                 | FUNCTION_CALL SEMICOLON
   19                 | RETURN_STATEMENT SEMICOLON

   20 NORMAL_STATEMENT: %empty
   21                 | DECLARATIVE_STATEMENT
   22                 | ASSIGNMENT_STATEMENT
   23                 | FUNCTION_CALL

   24 DECLARATIVE_STATEMENT: TYPE VAR_NAME

   25 ITERATIVE_STATEMENT: WHILE LP LOGICAL_EXPRESSION RP MATCHED
   26                    | FOR LP NORMAL_STATEMENT SEMICOLON LOGICAL_EXPRESSION SEMICOLON NORMAL_STATEMENT RP MATCHED

   27 ASSIGNMENT_STATEMENT: VAR_NAME ASSIGN_OP EXPRESSION
   28                     | VAR_NAME ASSIGN_OP FUNCTION_CALL
   29                     | DECLARATIVE_STATEMENT ASSIGN_OP EXPRESSION
   30                     | DECLARATIVE_STATEMENT ASSIGN_OP FUNCTION_CALL

   31 EXPRESSION: LOGICAL_EXPRESSION

   32 ARITHMETIC_EXPRESSION: ARITHMETIC_EXPRESSION ADDITIVE_OPERATOR TERM
   33                      | TERM

   34 TERM: TERM MULTIPLICATIVE_OPERATOR FACTOR
   35     | FACTOR

   36 FACTOR: VALUE
   37       | LP EXPRESSION RP

   38 ADDITIVE_OPERATOR: ADD
   39                  | SUB

   40 MULTIPLICATIVE_OPERATOR: MUL
   41                        | DIV

   42 LOGICAL_EXPRESSION: LOGICAL_EXPRESSION OR AND_EXPRESSION
   43                   | AND_EXPRESSION

   44 AND_EXPRESSION: AND_EXPRESSION AND BOOLEAN_FACTOR
   45               | BOOLEAN_FACTOR

   46 BOOLEAN_FACTOR: NOT BOOLEAN_FACTOR
   47               | RELATIONAL_EXPRESSION
   48               | ARITHMETIC_EXPRESSION

   49 RELATIONAL_EXPRESSION: ARITHMETIC_EXPRESSION RELATIONAL_OPERATOR ARITHMETIC_EXPRESSION
   50                      | EQUIVALANCE_EXPRESSION

   51 RELATIONAL_OPERATOR: LT
   52                    | GT
   53                    | GE
   54                    | LE

   55 EQUIVALANCE_EXPRESSION: ARITHMETIC_EXPRESSION EQ ARITHMETIC_EXPRESSION

   56 TYPE: PRIMITIVE_TYPE
   57     | VOID

   58 PRIMITIVE_TYPE: INT
   59               | FLOAT
   60               | BOOL
   61               | STR

   62 VALUE: VAR_NAME
   63      | CONSTANT

   64 CONSTANT: BOOLEAN_VAL
   65         | FLOAT_NUMBER
   66         | INTEGER
   67         | STRING

   68 BOOLEAN_VAL: TRUE
   69            | FALSE

   70 ARGUMENTS: TYPE VAR_NAME
   71          | ARGUMENTS COMMA TYPE VAR_NAME

   72 FUNCTION_DEFINITION: FUNCTION TYPE VAR_NAME LP ARGUMENTS RP LB STATEMENTS RB
   73                    | FUNCTION TYPE VAR_NAME LP RP LB STATEMENTS RB

   74 PARAMETERS: VALUE
   75           | PARAMETERS COMMA VALUE

   76 FUNCTION_CALL: VAR_NAME LP RP
   77              | VAR_NAME LP PARAMETERS RP
   78              | PRIMITIVE_FUNCTION_CALL

   79 RETURN_STATEMENT: RETURN EXPRESSION
   80                 | RETURN FUNCTION_CALL

   81 PRIMITIVE_FUNCTION_CALL: GET_HEADINGS LP RP
   82                        | GET_ALTITUDE LP RP
   83                        | GET_TEMPERATURE LP RP
   84                        | SET_VERTICALCLIMB LP ARITHMETIC_EXPRESSION RP
   85                        | SET_HORIZONTAL LP ARITHMETIC_EXPRESSION RP
   86                        | SET_HEADING LP LOGICAL_EXPRESSION RP
   87                        | SET_SPRAY LP LOGICAL_EXPRESSION RP
   88                        | CONNECT LP EXPRESSION COMMA EXPRESSION RP
   89                        | SLEEP LP ARITHMETIC_EXPRESSION RP
   90                        | SCAN_NEXT LP RP
   91                        | PRINT_OUT LP EXPRESSION RP


Terminals, with rules where they appear

$end (0) 0
error (256)
AND (258) 44
OR (259) 42
LP (260) 4 5 10 12 13 25 26 37 72 73 76 77 81 82 83 84 85 86 87 88
    89 90 91
RP (261) 4 5 10 12 13 25 26 37 72 73 76 77 81 82 83 84 85 86 87 88
    89 90 91
LB (262) 4 5 15 72 73
RB (263) 4 5 15 72 73
LCOM (264)
RCOM (265)
DOT (266)
SIGN (267)
COMMA (268) 71 75 88
SEMICOLON (269) 16 17 18 19 26
ADD (270) 38
SUB (271) 39
MUL (272) 40
DIV (273) 41
SPACE (274)
ANYCHAR (275)
LT (276) 51
LE (277) 54
GT (278) 52
GE (279) 53
EQ (280) 55
NOT (281) 46
ASSIGN_OP (282) 27 28 29 30
DIGIT (283)
INTEGER (284) 66
ALPHABETICAL (285)
ASCII (286)
STRING_WORD (287)
STRING (288) 67
VAR_NAME (289) 24 27 28 62 70 71 72 73 76 77
FLOAT_NUMBER (290) 65
IF (291) 10 12 13
WHILE (292) 25
FOR (293) 26
ELSE (294) 10 13
VOID (295) 57
INT (296) 58
FLOAT (297) 59
BOOL (298) 60
STR (299) 61
TRUE (300) 68
FALSE (301) 69
FUNCTION (302) 4 5 72 73
RETURN (303) 79 80
GET_HEADINGS (304) 81
GET_ALTITUDE (305) 82
GET_TEMPERATURE (306) 83
SET_VERTICALCLIMB (307) 84
SET_HORIZONTAL (308) 85
SET_HEADING (309) 86
SET_SPRAY (310) 87
CONNECT (311) 88
SLEEP (312) 89
SCAN_NEXT (313) 90
PRINT_OUT (314) 91
MAIN (315) 4 5


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
PROGRAM (62)
    on left: 1, on right: 0
FUNCTIONS (63)
    on left: 2 3, on right: 1 3
MAIN_FUNCTION (64)
    on left: 4 5, on right: 2
STATEMENTS (65)
    on left: 6 7, on right: 4 5 7 15 72 73
STATEMENT (66)
    on left: 8 9, on right: 6 7 12
MATCHED (67)
    on left: 10 11, on right: 8 10 13 25 26
UNMATCHED (68)
    on left: 12 13, on right: 9 13
NON_IF_STATEMENT (69)
    on left: 14 15 16 17 18 19, on right: 11
NORMAL_STATEMENT (70)
    on left: 20 21 22 23, on right: 26
DECLARATIVE_STATEMENT (71)
    on left: 24, on right: 16 21 29 30
ITERATIVE_STATEMENT (72)
    on left: 25 26, on right: 14
ASSIGNMENT_STATEMENT (73)
    on left: 27 28 29 30, on right: 17 22
EXPRESSION (74)
    on left: 31, on right: 27 29 37 79 88 91
ARITHMETIC_EXPRESSION (75)
    on left: 32 33, on right: 32 48 49 55 84 85 89
TERM (76)
    on left: 34 35, on right: 32 33 34
FACTOR (77)
    on left: 36 37, on right: 34 35
ADDITIVE_OPERATOR (78)
    on left: 38 39, on right: 32
MULTIPLICATIVE_OPERATOR (79)
    on left: 40 41, on right: 34
LOGICAL_EXPRESSION (80)
    on left: 42 43, on right: 10 12 13 25 26 31 42 86 87
AND_EXPRESSION (81)
    on left: 44 45, on right: 42 43 44
BOOLEAN_FACTOR (82)
    on left: 46 47 48, on right: 44 45 46
RELATIONAL_EXPRESSION (83)
    on left: 49 50, on right: 47
RELATIONAL_OPERATOR (84)
    on left: 51 52 53 54, on right: 49
EQUIVALANCE_EXPRESSION (85)
    on left: 55, on right: 50
TYPE (86)
    on left: 56 57, on right: 4 5 24 70 71 72 73
PRIMITIVE_TYPE (87)
    on left: 58 59 60 61, on right: 56
VALUE (88)
    on left: 62 63, on right: 36 74 75
CONSTANT (89)
    on left: 64 65 66 67, on right: 63
BOOLEAN_VAL (90)
    on left: 68 69, on right: 64
ARGUMENTS (91)
    on left: 70 71, on right: 4 71 72
FUNCTION_DEFINITION (92)
    on left: 72 73, on right: 3
PARAMETERS (93)
    on left: 74 75, on right: 75 77
FUNCTION_CALL (94)
    on left: 76 77 78, on right: 18 23 28 30 80
RETURN_STATEMENT (95)
    on left: 79 80, on right: 19
PRIMITIVE_FUNCTION_CALL (96)
    on left: 81 82 83 84 85 86 87 88 89 90 91, on right: 78


State 0

    0 $accept: . PROGRAM $end

    FUNCTION  shift, and go to state 1

    PROGRAM        go to state 2
    FUNCTIONS      go to state 3
    MAIN_FUNCTION  go to state 4


State 1

    4 MAIN_FUNCTION: FUNCTION . TYPE MAIN LP ARGUMENTS RP LB STATEMENTS RB
    5              | FUNCTION . TYPE MAIN LP RP LB STATEMENTS RB

    VOID   shift, and go to state 5
    INT    shift, and go to state 6
    FLOAT  shift, and go to state 7
    BOOL   shift, and go to state 8
    STR    shift, and go to state 9

    TYPE            go to state 10
    PRIMITIVE_TYPE  go to state 11


State 2

    0 $accept: PROGRAM . $end

    $end  shift, and go to state 12


State 3

    1 PROGRAM: FUNCTIONS .
    3 FUNCTIONS: FUNCTIONS . FUNCTION_DEFINITION

    FUNCTION  shift, and go to state 13

    $default  reduce using rule 1 (PROGRAM)

    FUNCTION_DEFINITION  go to state 14


State 4

    2 FUNCTIONS: MAIN_FUNCTION .

    $default  reduce using rule 2 (FUNCTIONS)


State 5

   57 TYPE: VOID .

    $default  reduce using rule 57 (TYPE)


State 6

   58 PRIMITIVE_TYPE: INT .

    $default  reduce using rule 58 (PRIMITIVE_TYPE)


State 7

   59 PRIMITIVE_TYPE: FLOAT .

    $default  reduce using rule 59 (PRIMITIVE_TYPE)


State 8

   60 PRIMITIVE_TYPE: BOOL .

    $default  reduce using rule 60 (PRIMITIVE_TYPE)


State 9

   61 PRIMITIVE_TYPE: STR .

    $default  reduce using rule 61 (PRIMITIVE_TYPE)


State 10

    4 MAIN_FUNCTION: FUNCTION TYPE . MAIN LP ARGUMENTS RP LB STATEMENTS RB
    5              | FUNCTION TYPE . MAIN LP RP LB STATEMENTS RB

    MAIN  shift, and go to state 15


State 11

   56 TYPE: PRIMITIVE_TYPE .

    $default  reduce using rule 56 (TYPE)


State 12

    0 $accept: PROGRAM $end .

    $default  accept


State 13

   72 FUNCTION_DEFINITION: FUNCTION . TYPE VAR_NAME LP ARGUMENTS RP LB STATEMENTS RB
   73                    | FUNCTION . TYPE VAR_NAME LP RP LB STATEMENTS RB

    VOID   shift, and go to state 5
    INT    shift, and go to state 6
    FLOAT  shift, and go to state 7
    BOOL   shift, and go to state 8
    STR    shift, and go to state 9

    TYPE            go to state 16
    PRIMITIVE_TYPE  go to state 11


State 14

    3 FUNCTIONS: FUNCTIONS FUNCTION_DEFINITION .

    $default  reduce using rule 3 (FUNCTIONS)


State 15

    4 MAIN_FUNCTION: FUNCTION TYPE MAIN . LP ARGUMENTS RP LB STATEMENTS RB
    5              | FUNCTION TYPE MAIN . LP RP LB STATEMENTS RB

    LP  shift, and go to state 17


State 16

   72 FUNCTION_DEFINITION: FUNCTION TYPE . VAR_NAME LP ARGUMENTS RP LB STATEMENTS RB
   73                    | FUNCTION TYPE . VAR_NAME LP RP LB STATEMENTS RB

    VAR_NAME  shift, and go to state 18


State 17

    4 MAIN_FUNCTION: FUNCTION TYPE MAIN LP . ARGUMENTS RP LB STATEMENTS RB
    5              | FUNCTION TYPE MAIN LP . RP LB STATEMENTS RB

    RP     shift, and go to state 19
    VOID   shift, and go to state 5
    INT    shift, and go to state 6
    FLOAT  shift, and go to state 7
    BOOL   shift, and go to state 8
    STR    shift, and go to state 9

    TYPE            go to state 20
    PRIMITIVE_TYPE  go to state 11
    ARGUMENTS       go to state 21


State 18

   72 FUNCTION_DEFINITION: FUNCTION TYPE VAR_NAME . LP ARGUMENTS RP LB STATEMENTS RB
   73                    | FUNCTION TYPE VAR_NAME . LP RP LB STATEMENTS RB

    LP  shift, and go to state 22


State 19

    5 MAIN_FUNCTION: FUNCTION TYPE MAIN LP RP . LB STATEMENTS RB

    LB  shift, and go to state 23


State 20

   70 ARGUMENTS: TYPE . VAR_NAME

    VAR_NAME  shift, and go to state 24


State 21

    4 MAIN_FUNCTION: FUNCTION TYPE MAIN LP ARGUMENTS . RP LB STATEMENTS RB
   71 ARGUMENTS: ARGUMENTS . COMMA TYPE VAR_NAME

    RP     shift, and go to state 25
    COMMA  shift, and go to state 26


State 22

   72 FUNCTION_DEFINITION: FUNCTION TYPE VAR_NAME LP . ARGUMENTS RP LB STATEMENTS RB
   73                    | FUNCTION TYPE VAR_NAME LP . RP LB STATEMENTS RB

    RP     shift, and go to state 27
    VOID   shift, and go to state 5
    INT    shift, and go to state 6
    FLOAT  shift, and go to state 7
    BOOL   shift, and go to state 8
    STR    shift, and go to state 9

    TYPE            go to state 20
    PRIMITIVE_TYPE  go to state 11
    ARGUMENTS       go to state 28


State 23

    5 MAIN_FUNCTION: FUNCTION TYPE MAIN LP RP LB . STATEMENTS RB

    LB                 shift, and go to state 29
    VAR_NAME           shift, and go to state 30
    IF                 shift, and go to state 31
    WHILE              shift, and go to state 32
    FOR                shift, and go to state 33
    VOID               shift, and go to state 5
    INT                shift, and go to state 6
    FLOAT              shift, and go to state 7
    BOOL               shift, and go to state 8
    STR                shift, and go to state 9
    RETURN             shift, and go to state 34
    GET_HEADINGS       shift, and go to state 35
    GET_ALTITUDE       shift, and go to state 36
    GET_TEMPERATURE    shift, and go to state 37
    SET_VERTICALCLIMB  shift, and go to state 38
    SET_HORIZONTAL     shift, and go to state 39
    SET_HEADING        shift, and go to state 40
    SET_SPRAY          shift, and go to state 41
    CONNECT            shift, and go to state 42
    SLEEP              shift, and go to state 43
    SCAN_NEXT          shift, and go to state 44
    PRINT_OUT          shift, and go to state 45

    STATEMENTS               go to state 46
    STATEMENT                go to state 47
    MATCHED                  go to state 48
    UNMATCHED                go to state 49
    NON_IF_STATEMENT         go to state 50
    DECLARATIVE_STATEMENT    go to state 51
    ITERATIVE_STATEMENT      go to state 52
    ASSIGNMENT_STATEMENT     go to state 53
    TYPE                     go to state 54
    PRIMITIVE_TYPE           go to state 11
    FUNCTION_CALL            go to state 55
    RETURN_STATEMENT         go to state 56
    PRIMITIVE_FUNCTION_CALL  go to state 57


State 24

   70 ARGUMENTS: TYPE VAR_NAME .

    $default  reduce using rule 70 (ARGUMENTS)


State 25

    4 MAIN_FUNCTION: FUNCTION TYPE MAIN LP ARGUMENTS RP . LB STATEMENTS RB

    LB  shift, and go to state 58


State 26

   71 ARGUMENTS: ARGUMENTS COMMA . TYPE VAR_NAME

    VOID   shift, and go to state 5
    INT    shift, and go to state 6
    FLOAT  shift, and go to state 7
    BOOL   shift, and go to state 8
    STR    shift, and go to state 9

    TYPE            go to state 59
    PRIMITIVE_TYPE  go to state 11


State 27

   73 FUNCTION_DEFINITION: FUNCTION TYPE VAR_NAME LP RP . LB STATEMENTS RB

    LB  shift, and go to state 60


State 28

   71 ARGUMENTS: ARGUMENTS . COMMA TYPE VAR_NAME
   72 FUNCTION_DEFINITION: FUNCTION TYPE VAR_NAME LP ARGUMENTS . RP LB STATEMENTS RB

    RP     shift, and go to state 61
    COMMA  shift, and go to state 26


State 29

   15 NON_IF_STATEMENT: LB . STATEMENTS RB

    LB                 shift, and go to state 29
    VAR_NAME           shift, and go to state 30
    IF                 shift, and go to state 31
    WHILE              shift, and go to state 32
    FOR                shift, and go to state 33
    VOID               shift, and go to state 5
    INT                shift, and go to state 6
    FLOAT              shift, and go to state 7
    BOOL               shift, and go to state 8
    STR                shift, and go to state 9
    RETURN             shift, and go to state 34
    GET_HEADINGS       shift, and go to state 35
    GET_ALTITUDE       shift, and go to state 36
    GET_TEMPERATURE    shift, and go to state 37
    SET_VERTICALCLIMB  shift, and go to state 38
    SET_HORIZONTAL     shift, and go to state 39
    SET_HEADING        shift, and go to state 40
    SET_SPRAY          shift, and go to state 41
    CONNECT            shift, and go to state 42
    SLEEP              shift, and go to state 43
    SCAN_NEXT          shift, and go to state 44
    PRINT_OUT          shift, and go to state 45

    STATEMENTS               go to state 62
    STATEMENT                go to state 47
    MATCHED                  go to state 48
    UNMATCHED                go to state 49
    NON_IF_STATEMENT         go to state 50
    DECLARATIVE_STATEMENT    go to state 51
    ITERATIVE_STATEMENT      go to state 52
    ASSIGNMENT_STATEMENT     go to state 53
    TYPE                     go to state 54
    PRIMITIVE_TYPE           go to state 11
    FUNCTION_CALL            go to state 55
    RETURN_STATEMENT         go to state 56
    PRIMITIVE_FUNCTION_CALL  go to state 57


State 30

   27 ASSIGNMENT_STATEMENT: VAR_NAME . ASSIGN_OP EXPRESSION
   28                     | VAR_NAME . ASSIGN_OP FUNCTION_CALL
   76 FUNCTION_CALL: VAR_NAME . LP RP
   77              | VAR_NAME . LP PARAMETERS RP

    LP         shift, and go to state 63
    ASSIGN_OP  shift, and go to state 64


State 31

   10 MATCHED: IF . LP LOGICAL_EXPRESSION RP MATCHED ELSE MATCHED
   12 UNMATCHED: IF . LP LOGICAL_EXPRESSION RP STATEMENT
   13          | IF . LP LOGICAL_EXPRESSION RP MATCHED ELSE UNMATCHED

    LP  shift, and go to state 65


State 32

   25 ITERATIVE_STATEMENT: WHILE . LP LOGICAL_EXPRESSION RP MATCHED

    LP  shift, and go to state 66


State 33

   26 ITERATIVE_STATEMENT: FOR . LP NORMAL_STATEMENT SEMICOLON LOGICAL_EXPRESSION SEMICOLON NORMAL_STATEMENT RP MATCHED

    LP  shift, and go to state 67


State 34

   79 RETURN_STATEMENT: RETURN . EXPRESSION
   80                 | RETURN . FUNCTION_CALL

    LP                 shift, and go to state 68
    NOT                shift, and go to state 69
    INTEGER            shift, and go to state 70
    STRING             shift, and go to state 71
    VAR_NAME           shift, and go to state 72
    FLOAT_NUMBER       shift, and go to state 73
    TRUE               shift, and go to state 74
    FALSE              shift, and go to state 75
    GET_HEADINGS       shift, and go to state 35
    GET_ALTITUDE       shift, and go to state 36
    GET_TEMPERATURE    shift, and go to state 37
    SET_VERTICALCLIMB  shift, and go to state 38
    SET_HORIZONTAL     shift, and go to state 39
    SET_HEADING        shift, and go to state 40
    SET_SPRAY          shift, and go to state 41
    CONNECT            shift, and go to state 42
    SLEEP              shift, and go to state 43
    SCAN_NEXT          shift, and go to state 44
    PRINT_OUT          shift, and go to state 45

    EXPRESSION               go to state 76
    ARITHMETIC_EXPRESSION    go to state 77
    TERM                     go to state 78
    FACTOR                   go to state 79
    LOGICAL_EXPRESSION       go to state 80
    AND_EXPRESSION           go to state 81
    BOOLEAN_FACTOR           go to state 82
    RELATIONAL_EXPRESSION    go to state 83
    EQUIVALANCE_EXPRESSION   go to state 84
    VALUE                    go to state 85
    CONSTANT                 go to state 86
    BOOLEAN_VAL              go to state 87
    FUNCTION_CALL            go to state 88
    PRIMITIVE_FUNCTION_CALL  go to state 57


State 35

   81 PRIMITIVE_FUNCTION_CALL: GET_HEADINGS . LP RP

    LP  shift, and go to state 89


State 36

   82 PRIMITIVE_FUNCTION_CALL: GET_ALTITUDE . LP RP

    LP  shift, and go to state 90


State 37

   83 PRIMITIVE_FUNCTION_CALL: GET_TEMPERATURE . LP RP

    LP  shift, and go to state 91


State 38

   84 PRIMITIVE_FUNCTION_CALL: SET_VERTICALCLIMB . LP ARITHMETIC_EXPRESSION RP

    LP  shift, and go to state 92


State 39

   85 PRIMITIVE_FUNCTION_CALL: SET_HORIZONTAL . LP ARITHMETIC_EXPRESSION RP

    LP  shift, and go to state 93


State 40

   86 PRIMITIVE_FUNCTION_CALL: SET_HEADING . LP LOGICAL_EXPRESSION RP

    LP  shift, and go to state 94


State 41

   87 PRIMITIVE_FUNCTION_CALL: SET_SPRAY . LP LOGICAL_EXPRESSION RP

    LP  shift, and go to state 95


State 42

   88 PRIMITIVE_FUNCTION_CALL: CONNECT . LP EXPRESSION COMMA EXPRESSION RP

    LP  shift, and go to state 96


State 43

   89 PRIMITIVE_FUNCTION_CALL: SLEEP . LP ARITHMETIC_EXPRESSION RP

    LP  shift, and go to state 97


State 44

   90 PRIMITIVE_FUNCTION_CALL: SCAN_NEXT . LP RP

    LP  shift, and go to state 98


State 45

   91 PRIMITIVE_FUNCTION_CALL: PRINT_OUT . LP EXPRESSION RP

    LP  shift, and go to state 99


State 46

    5 MAIN_FUNCTION: FUNCTION TYPE MAIN LP RP LB STATEMENTS . RB
    7 STATEMENTS: STATEMENTS . STATEMENT

    LB                 shift, and go to state 29
    RB                 shift, and go to state 100
    VAR_NAME           shift, and go to state 30
    IF                 shift, and go to state 31
    WHILE              shift, and go to state 32
    FOR                shift, and go to state 33
    VOID               shift, and go to state 5
    INT                shift, and go to state 6
    FLOAT              shift, and go to state 7
    BOOL               shift, and go to state 8
    STR                shift, and go to state 9
    RETURN             shift, and go to state 34
    GET_HEADINGS       shift, and go to state 35
    GET_ALTITUDE       shift, and go to state 36
    GET_TEMPERATURE    shift, and go to state 37
    SET_VERTICALCLIMB  shift, and go to state 38
    SET_HORIZONTAL     shift, and go to state 39
    SET_HEADING        shift, and go to state 40
    SET_SPRAY          shift, and go to state 41
    CONNECT            shift, and go to state 42
    SLEEP              shift, and go to state 43
    SCAN_NEXT          shift, and go to state 44
    PRINT_OUT          shift, and go to state 45

    STATEMENT                go to state 101
    MATCHED                  go to state 48
    UNMATCHED                go to state 49
    NON_IF_STATEMENT         go to state 50
    DECLARATIVE_STATEMENT    go to state 51
    ITERATIVE_STATEMENT      go to state 52
    ASSIGNMENT_STATEMENT     go to state 53
    TYPE                     go to state 54
    PRIMITIVE_TYPE           go to state 11
    FUNCTION_CALL            go to state 55
    RETURN_STATEMENT         go to state 56
    PRIMITIVE_FUNCTION_CALL  go to state 57


State 47

    6 STATEMENTS: STATEMENT .

    $default  reduce using rule 6 (STATEMENTS)


State 48

    8 STATEMENT: MATCHED .

    $default  reduce using rule 8 (STATEMENT)


State 49

    9 STATEMENT: UNMATCHED .

    $default  reduce using rule 9 (STATEMENT)


State 50

   11 MATCHED: NON_IF_STATEMENT .

    $default  reduce using rule 11 (MATCHED)


State 51

   16 NON_IF_STATEMENT: DECLARATIVE_STATEMENT . SEMICOLON
   29 ASSIGNMENT_STATEMENT: DECLARATIVE_STATEMENT . ASSIGN_OP EXPRESSION
   30                     | DECLARATIVE_STATEMENT . ASSIGN_OP FUNCTION_CALL

    SEMICOLON  shift, and go to state 102
    ASSIGN_OP  shift, and go to state 103


State 52
